@@ -157,23 +157,43 @@ class BooleanScorer2 extends Scorer {
   private Scorer countingDisjunctionSumScorer(final List<Scorer> scorers,
       int minNrShouldMatch) throws IOException {
     // each scorer from the list counted as a single matcher
-    return new DisjunctionSumScorer(weight, scorers, minNrShouldMatch) {
-      private int lastScoredDoc = -1;
-      // Save the score of lastScoredDoc, so that we don't compute it more than
-      // once in score().
-      private float lastDocScore = Float.NaN;
-      @Override public float score() throws IOException {
-        int doc = docID();
-        if (doc >= lastScoredDoc) {
-          if (doc > lastScoredDoc) {
-            lastDocScore = super.score();
-            lastScoredDoc = doc;
+    if (minNrShouldMatch > 1) {
+      return new MinShouldMatchSumScorer(weight, scorers, minNrShouldMatch) {
+        private int lastScoredDoc = -1;
+        // Save the score of lastScoredDoc, so that we don't compute it more than
+        // once in score().
+        private float lastDocScore = Float.NaN;
+        @Override public float score() throws IOException {
+          int doc = docID();
+          if (doc >= lastScoredDoc) {
+            if (doc > lastScoredDoc) {
+              lastDocScore = super.score();
+              lastScoredDoc = doc;
+            }
+            coordinator.nrMatchers += super.nrMatchers;
           }
-          coordinator.nrMatchers += super.nrMatchers;
-        }
         return lastDocScore;
-      }
-    };
+        }
+      };
+    } else {
+      return new DisjunctionSumScorer(weight, scorers) {
+        private int lastScoredDoc = -1;
+        // Save the score of lastScoredDoc, so that we don't compute it more than
+        // once in score().
+        private float lastDocScore = Float.NaN;
+        @Override public float score() throws IOException {
+          int doc = docID();
+          if (doc >= lastScoredDoc) {
+            if (doc > lastScoredDoc) {
+              lastDocScore = super.score();
+              lastScoredDoc = doc;
+            }
+            coordinator.nrMatchers += super.nrMatchers;
+          }
+        return lastDocScore;
+        }
+      };
+    }
   }
 
   private Scorer countingConjunctionSumScorer(boolean disableCoord,
@@ -275,7 +295,7 @@ class BooleanScorer2 extends Scorer {
           : new ReqExclScorer(requiredCountingSumScorer,
                               ((prohibitedScorers.size() == 1)
                                 ? prohibitedScorers.get(0)
-                                : new DisjunctionSumScorer(weight, prohibitedScorers)));
+                                : new MinShouldMatchSumScorer(weight, prohibitedScorers)));
   }
 
   /** Scores and collects all matching documents.
